--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,8 @@
 
 # Dependency directories (remove the comment below to include it)
 vendor/
+
+# Application
+lingvanex-server/*
+!lingvanex-server/*.py
+!lingvanex-server/*.bat
